<resources>
    <string name="app_name"></string>

    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="tv_ImageSize">Image Size</string>
    <string name="tv_Color">Color Filter</string>
    <string name="tv_Type">Image Type</string>
    <string name="tv_Site">Site Filter</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_ok">OK</string>

    <string-array name="image_size">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>

    <string-array name="color">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="type">
        <item>any</item>
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>



</resources>
